Terraform/1.vpc.tf.tf
# Create a VPC
resource "aws_vpc" "my-vpc" {
  cidr_block = "10.0.0.0/16"

    tags = {
    Name = "my-vpc"
  }
}
